--- a/calculator.html
+++ b/calculator.html
@@ -29,7 +29,7 @@ Number:
 
   <button onclick="cuarta()"> x^4 </button>
 
-  <button onclick="seno()"> seno </button>
+  <button onclick="seno()"> sin(x) </button>
 </p>
 </body>
 </html>
